<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home_24"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history_24"
            android:title="@string/history"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info_24"
            android:title="@string/about_us"/>

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/info"/>

    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/login_24"
                android:title="@string/login"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_24"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>