<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/user_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/img_des"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="40dp" />
    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/head"
        app:layout_constraintEnd_toEndOf="@id/head"
        app:layout_constraintTop_toBottomOf="@id/head"
        android:padding="10dp"
        android:text="@string/your_email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="16dp" />
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/head"
        app:layout_constraintEnd_toEndOf="@id/head"
        app:layout_constraintTop_toBottomOf="@id/email_title"
        android:padding="10dp" />
    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/head"
        app:layout_constraintEnd_toEndOf="@id/head"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:padding="10dp"
        android:text="@string/your_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingTop="16dp" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/head"
        app:layout_constraintEnd_toEndOf="@id/head"
        app:layout_constraintTop_toBottomOf="@id/name_title"
        android:padding="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>

<RelativeLayout
    android:id="@+id/remind_block"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/remind_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:text="@string/remind_login"
        android:textSize="20sp" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/remind_message"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/action_sign_in"
        android:textSize="15sp"
        android:textStyle="bold" />
</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>