<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/closeButton"
        android:contentDescription="@string/img_des"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/baseline_close_24"
        />
    <RatingBar
        android:id="@+id/review_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:isIndicator="false"
        android:rating="5"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/closeButton"/>
    <EditText
        android:id="@+id/comment_block"
        android:layout_width="360dp"
        android:layout_height="100dp"
        android:autofillHints="autofill"
        android:inputType=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review_star"
        android:hint="@string/leave_a_comment"/>
    <Button
        android:id="@+id/uploadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_block"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>